/**
 * This file is auto generated by tto v0.4.5 !
 * If you want to modify this code, please read the guide
 * to modify code template.
 *
 * Get started: https://github.com/ixre/tto
 *
 * Copyright (C) 2009-2022 56X.NET, All rights reserved.
 *
 * name : job_exec_data_service.proto
 * author : jarrysix
 * date : 2022/03/06 03:16:21
 * description :
 * history :
 */




syntax = "proto3";
option go_package = "./;proto";
option java_package = "com.github.go2o.rpc";

import "global.proto";

/** JobExecData服务 */
service ExecuteService {
  /** 获取JobExecData */
  rpc GetJob (GetJobRequest) returns (SExecData) {
  }
  /** 更新任务执行游标 */
  rpc UpdateExecCursor (UpdateCursorRequest) returns (Result) {
  }

  /** 记录失败 */
  rpc AddFail(AddFailRequest)returns(Result){}
}

message GetJobRequest{
  /** 任务名称 */
  string JobName = 1;
  /** 任务不存在时是否创建 */
  bool Create = 2;
}

/** UpdateCursorRequest */
message UpdateCursorRequest{
  /** 任务名称 */
  string JobName = 1;
  /** 记录编号　*/
  int64 RecordId = 2;
}

message    AddFailRequest{
  /** 任务名称 */
  string JobName = 1;
  /** 记录编号　*/
  int64 RecordId = 2;
}

/** JobExecData */
message SExecData{
  /** 编号 */
  int64 Id = 1;
  /** 任务名称 */
  string JobName = 2;
  /** 上次执行位置索引 */
  int64 LastExecIndex = 3;
  /** 最后执行时间 */
  int64 LastExecTime = 4;
}
